# cpp_properties

./: .gitignore  CMakeLists.txt  Readme.md
doc/: interface.hpp  property_manifest.bib  property_manifest.tex
example/: CMakeLists.txt  my_url.cpp
src/: CMakeLists.txt
src/prop/: alias_property.hpp  enable_properties.hpp  holding_property.hpp  member_property.hpp  method_property.hpp  properties.hpp  property_tags.hpp
src/prop/detail/: enable_properties.hpp  forward_declarations.hpp  holding_property.hpp  holding_property_facade.hpp  identity.hpp  index.hpp  inner_traits.hpp  is_alias_property.hpp  is_property.hpp  member_function_wrappers.hpp  method_property.hpp  owner_pointer_reparator.hpp  property_base.hpp  property_base_visitor.hpp  property_holding_base.hpp  property_index.hpp  property_info.hpp  property_member_pointer_discoverer.hpp  property_method_base.hpp  property_operators_common.hpp  property_operators_method.hpp  property_operators_real_value.hpp  property_real_value_base.hpp  property_real_value_facade.hpp  property_real_value_visitor.hpp  setter_argument_mutator.hpp  setter_rvalue_adapter.hpp  static_class_counter.hpp  unwrap_if_property.hpp  value_holder.hpp
test/: .gitignore  CMakeLists.txt  common.hpp  gtest.cmake  holding_property.cpp  method_property.cpp
